--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 *.dll
 *.so
 *.dylib
+go-test
+go-examples
 
 # Test binary, build with `go test -c`
 *.test
@@ -12,3 +14,6 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# IntelliJ out folder
+.idea/
