Use public registry fredsimon Fix Dockerfile to output app executable Use gorilla mux

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,11 @@
 *.dll
 *.so
 *.dylib
-go-test
-go-examples
+
+# Executable names
+/go-test
+/go-examples
+/app
 
 # Test binary, build with `go test -c`
 *.test
